crates/general/fixtures/invalid/lambda_arrow.zt
-- General-mode lambdas use `.` rather than `=>`.

{
  bad = \x => x;
}
